--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../public/css/style.css" />
-    <link rel="icon" href="../public/images/logo.svg" />
+    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="icon" href="public/images/logo.svg" />
     <title>Jfe Store</title>
   </head>
   <body class="font-poppins">
@@ -69,12 +69,12 @@
             <div class="app flex gap-x-2">
               <img
                 class="app-store w-28 object-cover"
-                src="../public/images/app-store.png"
+                src="public/images/app-store.png"
                 alt=""
               />
               <img
                 class="google-play w-28 object-cover"
-                src="../public/images/play-store.png"
+                src="public/images/play-store.png"
                 alt=""
               />
             </div>
@@ -83,19 +83,19 @@
             <div class="chev-left">
               <img
                 class="w-8 md:w-9 lg:w-10"
-                src="../public/images/arrow_left.svg"
+                src="public/images/arrow_left.svg"
                 alt=""
               />
             </div>
             <img
               class="bg-hero max-w-xs"
-              src="../public/images/bg-hero.png"
+              src="public/images/bg-hero.png"
               alt=""
             />
             <div class="chev-right">
               <img
                 class="w-8 md:w-9 lg:w-10"
-                src="../public/images/arrow_right.svg"
+                src="public/images/arrow_right.svg"
                 alt=""
               />
             </div>
@@ -113,11 +113,7 @@
             <div class="card">
               <div class="card-images relative w-52">
                 <div class="darkside"></div>
-                <img
-                  class="w-full"
-                  src="../public/images/product-1.jpg"
-                  alt=""
-                />
+                <img class="w-full" src="public/images/product-1.jpg" alt="" />
               </div>
               <div class="card-body">
                 <div class="card-info">
@@ -136,11 +132,7 @@
             <div class="card">
               <div class="card-images relative w-52">
                 <div class="darkside"></div>
-                <img
-                  class="w-full"
-                  src="../public/images/product-2.jpg"
-                  alt=""
-                />
+                <img class="w-full" src="public/images/product-2.jpg" alt="" />
               </div>
               <div class="card-body">
                 <div class="card-info">
@@ -159,11 +151,7 @@
             <div class="card">
               <div class="card-images relative w-52">
                 <div class="darkside"></div>
-                <img
-                  class="w-full"
-                  src="../public/images/product-3.jpg"
-                  alt=""
-                />
+                <img class="w-full" src="public/images/product-3.jpg" alt="" />
               </div>
               <div class="card-body">
                 <div class="card-info">
@@ -189,7 +177,7 @@
           <div class="cols-payday lg:basis-4/12">
             <img
               class="hidden w-full md:block lg:w-11/12"
-              src="../public/images/payday-preview-1.png"
+              src="public/images/payday-preview-1.png"
               alt=""
             />
           </div>
@@ -233,22 +221,22 @@
           <div class="cols-store lg:basis-5/12">
             <div class="brand">
               <div class="cols-brand">
-                <img class="" src="../public/images/brand-zara.png" alt="" />
+                <img class="" src="public/images/brand-zara.png" alt="" />
               </div>
               <div class="cols-brand">
-                <img class="" src="../public/images/brand-alibaba.png" alt="" />
+                <img class="" src="public/images/brand-alibaba.png" alt="" />
               </div>
               <div class="cols-brand">
-                <img src="../public/images/brand-shopify.png" alt="" />
+                <img src="public/images/brand-shopify.png" alt="" />
               </div>
               <div class="cols-brand">
-                <img src="../public/images/brand-amazon.png" alt="" />
+                <img src="public/images/brand-amazon.png" alt="" />
               </div>
               <div class="cols-brand">
-                <img src="../public/images/brand-tokped.png" alt="" />
+                <img src="public/images/brand-tokped.png" alt="" />
               </div>
               <div class="cols-brand">
-                <img src="../public/images/brand-bukalapak.png" alt="" />
+                <img src="public/images/brand-bukalapak.png" alt="" />
               </div>
             </div>
           </div>
@@ -267,7 +255,7 @@
                 <div class="darkside"></div>
                 <img
                   class="w-4/5 object-cover"
-                  src="../public/images/favorite-1.png"
+                  src="public/images/favorite-1.png"
                   alt=""
                 />
               </div>
@@ -288,7 +276,7 @@
                 <div class="darkside"></div>
                 <img
                   class="w-4/5 object-cover"
-                  src="../public/images/favorite-2.png"
+                  src="public/images/favorite-2.png"
                   alt=""
                 />
               </div>
@@ -318,14 +306,14 @@
               app for now.
             </p>
             <div class="app-voucher">
-              <img class="w-28" src="../public/images/app-store.png" alt="" />
-              <img class="w-28" src="../public/images/play-store.png" alt="" />
+              <img class="w-28" src="public/images/app-store.png" alt="" />
+              <img class="w-28" src="public/images/play-store.png" alt="" />
             </div>
           </div>
           <div class="cols-voucher lg:basis-2/4">
             <img
               class="hero-images-voucher"
-              src="../public/images/download-app.svg"
+              src="public/images/download-app.svg"
               alt=""
             />
           </div>
@@ -445,6 +433,6 @@
         >
       </div>
     </footer>
-    <script src="../public/js/main.js"></script>
+    <script src="public/js/main.js"></script>
   </body>
 </html>
